syntax = "proto3";

package FileTransfer;

service Files {
  rpc StartUpload(stream StartUploadRequest) returns (StartUploadResponse);
  rpc StartDownload(StartDownloadRequest) returns (stream StartDownloadResponse);
  rpc ResumeUpload(stream ResumeUploadRequest) returns (ResumeUploadResponse);
  rpc ResumeDownload(ResumeDownloadRequest) returns (stream ResumeDownloadResponse);
}

message StartUploadRequest {
	oneof upload_request {
		FileMetadata file_metadata = 1;
		FilePayload file_payload = 2;
	}
}

message StartUploadResponse {
}

message StartDownloadRequest {
}

message StartDownloadResponse {
}

message ResumeUploadRequest {
}

message ResumeUploadResponse {
}

message ResumeDownloadRequest {
}

message ResumeDownloadResponse {
}

message FileMetadata {
	string file_name = 1;
}

message FilePayload {
	bytes Chunk = 1;
}
